# 42-taskmaster

./: .gitignore  README.md  pyproject.toml  requirements.txt  taskmaster.py  taskmaster.yml  test.yml
.devcontainer/: devcontainer.json
.github/workflows/: python-package-conda.yml  release.yml
src/taskmaster/: service.py  taskmaster.py
src/taskmaster/gui/: _configuration.py  _default.py  _log.py  _services.py  gui.py  table.py
src/taskmaster/utils/: config.py  email.py  gui.py  log_reader.py  logger.py
taskmaster/: service.py  taskmaster.py
taskmaster/gui/: _configuration.py  _default.py  _log.py  _utils.py  gui.py  table.py
taskmaster/utils/: email.py
tests/: test_config.py  test_log_reader.py  test_service.py  test_service_handler.py  test_subprocess.py
tests/config_templates/invalid/: email.yaml
tests/config_templates/valid/: autorestart_always.yaml  autorestart_never.yaml  autorestart_unexpected.yaml  autostart_false.yaml  autostart_true.yaml  email.yaml  exitcodes_max.yaml  exitcodes_min.yaml  global.yaml  name_max.yaml  name_min.yaml  numprocs_max.yaml  numprocs_min.yaml  random_exit.yml  service_handler_reference.yaml  service_reference.yaml  startretries_max.yaml  startretries_min.yaml  starttime_max.yaml  starttime_min.yaml  stderr.yml  (+13 more)
tests/programs/: Makefile  env.c  env.out  random_exit.c  random_exit.out  random_sleep.c  random_sleep.out  sigkill.c  sigkill.out  stderr.c  stderr.out  stderr_infinite.c  stderr_infinite.out  stdout.c  stdout.out  stdout_infinite.c  stdout_infinite.out  taskmaster.yml  umask.c  umask.out
utils/: gui.py
(+12 files in other folders)
